@@ -31,3 +31,4 @@ depth: 1
  * Prevent JS error on images index view when collections dropdown is omitted (Tidiane Dia)
  * Prevent "Entries per page" dropdown on images index view from reverting to 10 (Tidiane Dia)
  * Set related_name on user revision relation to avoid conflict with django-reversion (Matt Westcott)
+ * Ensure the "recent edits" panel on the Dashboard (home) page works when page record is missing (Matt Westcott)
