@@ -56,6 +56,7 @@ Changelog
  * Fix: Prevent JS error on images index view when collections dropdown is omitted (Tidiane Dia)
  * Fix: Prevent "Entries per page" dropdown on images index view from reverting to 10 (Tidiane Dia)
  * Fix: Set related_name on user revision relation to avoid conflict with django-reversion (Matt Westcott)
+ * Fix: Ensure the "recent edits" panel on the Dashboard (home) page works when page record is missing (Matt Westcott)
 
 
 4.0.1 (05.09.2022)
